--- a/docker-compose.jenkins.yaml
+++ b/docker-compose.jenkins.yaml
@@ -1,11 +1,10 @@
-version: '3.8'
+version: "3.8"
 
 services:
   jenkinsfile-runner:
     build:
       context: jenkins
     volumes:
-      - ./jenkins/pipelines/example/Jenkinsfile:/workspace/Jenkinsfile:ro
-      # ro: 読み取り専用としてマウントするオプション
+      - ${JENKINSFILE_PATH:-./jenkins/pipelines/example/Jenkinsfile}:/workspace/Jenkinsfile:ro
     stdin_open: true
     tty: true
