--- a/docker-compose.jenkins.yaml
+++ b/docker-compose.jenkins.yaml
@@ -1,10 +1,15 @@
 version: "3.8"
 
 services:
-  jenkinsfile-runner:
+  jenkins-dev:
     build:
       context: jenkins
-    volumes:
-      - ${JENKINSFILE_PATH:-./jenkins/pipelines/example/Jenkinsfile}:/workspace/Jenkinsfile:ro
     stdin_open: true
     tty: true
+    volumes:
+      - ./jenkins/scripts:/var/jenkins_home/scripts
+    ports:
+      - "8080:8080" # ホストの8080ポートをコンテナの8080ポートにマッピング
+      - "50000:50000" # エージェント用ポート (必要に応じて)
+    environment:
+      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false # セットアップウィザードをスキップ
