--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ python_project/.coverage
 python_project/coverage.svg
 python_project/pytest-coverage.txt
 python_project/pytest.xml
+python_project/README.md
+coverage_table.md
+pytest-coverage.txt
+pytest.xml
