--- a/gcloud/workspace/ssh-connect.cloudbuild.yaml
+++ b/gcloud/workspace/ssh-connect.cloudbuild.yaml
@@ -1,33 +1,37 @@
 steps:
-  - id: "Parse JSON"
+  - id: ssh_debug
     name: "ubuntu"
-    entrypoint: "bash"
-    args:
-      - "-c"
-      - |
-        apt-get update && apt-get install -y jq openssh-client 
-        # Set up SSH
-        mkdir -p ~/.ssh
-        echo -e "$(echo "${_SSH_CREDENTIALS}" | jq -r '.SSH_PRIVATE_KEY')" > ~/.ssh/id_rsa
-        # echo "${_SSH_CREDENTIALS}" | jq -r '.SSH_PRIVATE_KEY' > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+    secretEnv:
+      - SSH_CREDENTIALS
+    script: |
+      # echo ${SSH_CREDENTIALS}
+      apt-get update && apt-get install -y jq openssh-client
+      export SSH_USER=$(echo "${SSH_CREDENTIALS}" | jq -r '.SSH_USER')
+      export SSH_SERVER_HOST=$(echo "${SSH_CREDENTIALS}" | jq -r '.SSH_SERVER_HOST')
+      export SSH_PRIVATE_KEY=$(echo "${SSH_CREDENTIALS}" | jq -r '.SSH_PRIVATE_KEY')
+      echo ${SSH_USER}
+      mkdir -p ~/.ssh
+      echo "$(echo "${SSH_PRIVATE_KEY}")" > ~/.ssh/id_rsa
+      chmod 600 ~/.ssh/id_rsa
 
-        # SSH Connnected(Nothing known hosts)
-        echo $(echo "${_SSH_CREDENTIALS}" | jq -r '.SSH_USER')@$(echo "${_SSH_CREDENTIALS}" | jq -r '.SSH_SERVER_HOST') 
-        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $(echo "${_SSH_CREDENTIALS}" | jq -r '.SSH_USER')@$(echo "${_SSH_CREDENTIALS}" | jq -r '.SSH_SERVER_HOST') << 'EOF'
-        if ! sudo systemctl is-active --quiet rocketchat; then
-          echo "Rocket.Chat is not running. Restarting..."
-          sudo systemctl restart rocketchat
-          if sudo systemctl is-active --quiet rocketchat; then
-            echo "Rocket.Chat restarted successfully."
-          else
-            echo "Failed to restart Rocket.Chat."
-            exit 1
-          fi
+      # SSH Connnected(Nothing known hosts)
+      echo "${SSH_USER}@${SSH_SERVER_HOST}"
+      ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${SSH_USER}@${SSH_SERVER_HOST} << 'EOF'
+      if ! sudo systemctl is-active --quiet rocketchat; then
+        echo "Rocket.Chat is not running. Restarting..."
+        sudo systemctl restart rocketchat
+        if sudo systemctl is-active --quiet rocketchat; then
+          echo "Rocket.Chat restarted successfully."
         else
-          echo "Rocket.Chat is running fine."
+          echo "Failed to restart Rocket.Chat."
+          exit 1
         fi
-        EOF
+      else
+        echo "Rocket.Chat is running fine."
+      fi
+      EOF
 
-substitutions:
-  _SSH_CREDENTIALS: $(cat /workspace/.secrets.json)
+availableSecrets:
+  secretManager:
+    - versionName: projects/gcp-devel-project/secrets/SSH_CREDENTIALS/versions/latest
+      env: SSH_CREDENTIALS
