--- a/docker-compose.jenkins.yaml
+++ b/docker-compose.jenkins.yaml
@@ -14,6 +14,8 @@ services:
     ports:
       - "8080:8080" # ホストの8080ポートをコンテナの8080ポートにマッピング
       - "50000:50000" # エージェント用ポート (必要に応じて)
+    env_file:
+      - .secrets
     environment:
       - JAVA_OPTS=-Djenkins.install.runSetupWizard=false # セットアップウィザードをスキップ
       - JENKINS_USER=admin
