--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,5 @@
+GITHUB_USER=githubuser
 GITHUB_TOKEN=your_personal_access_token_here
+GITBUCKET_USER=gitbucket
+GITBUCKET_PASS=gitbucket
+FLY_ACCESS_TOKEN=your_fly.io_access_token_here
