--- a/.github/workflows/create-artifacts-branch.yml
+++ b/.github/workflows/create-artifacts-branch.yml
@@ -16,18 +16,22 @@ jobs:
         run: |
           mkdir dist
           echo "This is a sample artifact" > dist/README.md
+          ls
 
-      # # 3. オリファンブランチを作成
-      # - name: Create orphan branch
-      #   run: |
-      #     orphan=$(git branch -a|grep "remotes/origin/artifacts")
-      #     if [-z "$orphan" ];then
-      #       # 存在しない場合はブランチを作成する
-      #       git checkout --orphan artifacts
-      #       git rm -rf
-      #     else
-      #       git checkout artifacts
-      #     fi
+      # 3. オリファンブランチを作成
+      - name: Create orphan branch
+        run: |
+          ls
+          orphan=$(git branch -a|grep "remotes/origin/artifacts")
+          if [-z "$orphan" ];then
+            echo "Not Exists branch"
+            # 存在しない場合はブランチを作成する
+            # git checkout --orphan artifacts
+            # git rm -rf
+          else
+            echo "Exists branch"
+            git checkout artifacts
+          fi
       #     # 成果物をコピー
       #     cp -r dist/* .
       #   # 成果物をプッシュ
