--- a/.github/workflows/create-artifacts-branch.yml
+++ b/.github/workflows/create-artifacts-branch.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           ls
           echo "Debug1"
-          orphan=$(git branch -a|grep "remotes/origin/artifacts")
-          echo "Debug2"
+          git branch -a
+          orphan=$(git branch -a|grep "remotes/origin/artifacts") || :
           if [-z "$orphan" ];then
             echo "Not Exists branch"
             # 存在しない場合はブランチを作成する
