--- a/.github/workflows/create-artifacts-branch2.yml
+++ b/.github/workflows/create-artifacts-branch2.yml
@@ -25,7 +25,9 @@ jobs:
           # リモートブランチが存在するか確認
           if git ls-remote --heads origin artifacts | grep -q artifacts; then
             echo "Branch 'artifacts' already exists remotely. Deleting local and resetting..."
-             git checkout artifacts
+            # リモートブランチをローカルに取得してチェックアウト
+            git fetch origin artifacts:artifacts
+            git checkout artifacts
           else
             echo "Not Exists branch"
             # オリファンブランチを作成
