--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Add known hosts
         run: |
-          ssh-keyscan -H ${{ secrets.SSH_SERVER_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ vars.SSH_SERVER_HOST }} >> ~/.ssh/known_hosts
 
       - name: Connect to server
         run: |
