--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -29,15 +29,15 @@ jobs:
         run: gcloud auth configure-docker
 
       - name: Build Docker image
-        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA .
+        run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA samples/cloud-run/
 
-      - name: Push Docker image
-        run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA
+      # - name: Push Docker image
+      #   run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA
 
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy ${{ vars.APP_NAME }} \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA \
-            --region ${{ secrets.GCP_REGION }} \
-            --platform managed \
-            --allow-unauthenticated
+      # - name: Deploy to Cloud Run
+      #   run: |
+      #     gcloud run deploy ${{ vars.APP_NAME }} \
+      #       --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA \
+      #       --region ${{ secrets.GCP_REGION }} \
+      #       --platform managed \
+      #       --allow-unauthenticated
