--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -29,7 +29,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v2.1.0
 
       - name: Configure Docker
-        run: gcloud auth configure-docker
+        run: gcloud auth configure-docker gcr.io
 
       - name: Build Docker image
         run: docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA samples/cloudrun/
