--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -37,10 +37,12 @@ jobs:
       - name: Push Docker image
         run: docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA
 
-      # - name: Deploy to Cloud Run
-      #   run: |
-      #     gcloud run deploy ${{ vars.APP_NAME }} \
-      #       --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA \
-      #       --region ${{ secrets.GCP_REGION }} \
-      #       --platform managed \
-      #       --allow-unauthenticated
+      - name: Deploy to Cloud Run
+        run: |
+          gcloud run deploy ${{ vars.APP_NAME }} \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ vars.APP_NAME }}:$GITHUB_SHA \
+            --region ${{ secrets.GCP_REGION }} \
+            --platform managed \
+            --allow-unauthenticated \
+            --min-instances 0 \
+            --max-instances 1
