ポートを追加する

--- a/.github/workflows/deploy-cloud-run.yml
+++ b/.github/workflows/deploy-cloud-run.yml
@@ -45,4 +45,5 @@ jobs:
             --platform managed \
             --allow-unauthenticated \
             --min-instances 0 \
-            --max-instances 1
+            --max-instances 1 \
+            --port 80
