--- a/samples/appengin/app.yaml
+++ b/samples/appengin/app.yaml
@@ -1,3 +1,4 @@
+service: demo-app
 runtime: python310
 
 automatic_scaling:
@@ -7,6 +8,10 @@ automatic_scaling:
   max_instances: 1 # 最大インスタンス数を1に制限
 
 entrypoint: gunicorn -b :$PORT main:app
+
+skip_files:
+  - ^.*\.log$ # ログファイルを除外
+  - ^venv/ # 仮想環境ディレクトリを除外
 
 handlers:
   - url: /.*
